Bug 236215 Stop creating spurious ranges when removing the first or last row from a range r=varga sr=mscott